fix UVM_MAP_CLIP_* to only clip if the clip address is within the entry (which would only not be true if the clip address is at one of the boundaries of the entry).  fixes PR 44788.